2002-05-03  Federico Mena Quintero  <federico@ximian.com>

	* gedit-document.c (gedit_document_save_as_real): Do saving in
	the following way:

		1. Get the real filename by following all the symlinks of
		   the original filename.  This is the icky function
		   follow_symlinks().

		2. Write a temporary filename with the buffer contents.

		3. If create_backup_copy, rename the real_filename to
		   real_filename.bak.

		4. Rename the temporary filename to the real_filename.

		5. Restore file permissions and ownership.

	  It is sad that yes, the Unix API is complete and lets us do
	  this, but we must still write a bunch of code to *save a stupid
	  file*.

2002-04-30  jacob berkman  <jacob@ximian.com>

	* Makefile.am (EXTRA_DIST): add gnome-recent-marshal.list

2002-04-30  Federico Mena Quintero  <federico@ximian.com>

	* dialogs/gedit-dialog-replace.c
	(replace_dlg_replace_button_pressed): Do not pass null arguments
	for printf() formats to gedit_debug(); this will crash on
	non-glibc systems.  Should fix #78011.

2002-04-30  Paolo Maggi  <maggi@athena.polito.it>

	* gedit-ui.xml: added an icon to Help->Contents

2002-04-29  Miles Lane  <miles@megapathdsl.net>

	* Add "#include <string.h>" to gnome-recent-util.c in order
	  to fix the build.  Instructed to do so by Chema.  :)

2002-04-29  James Willcox  <jwillcox@cs.indiana.edu>

	* Makefile.am:  Added a bunch of new stuff for gnome-recent (recent
	files code)
	* gnome-recent-model.[ch], gnome-recent-view.[ch],
	gnome-recent-view-bonobo.[ch], gnome-recent-util.[ch],
	gnome-recent-marshal.list:
	All new files, replaces the old recent files system with a new
	model-view system.
	* gedit-file.c (gedit_file_open_recent):  Small changes to cope with
	gnome-recent stuff
	* gedit-mdi.c: ditto
	* gedit-recent.[ch]:  Essentially, these are new, even though they
	existed before.  This is just an accessor for the gnome-recent
	model now.

	All of this stuff should fix bug #76641 (problems when FAM isn't
	available).
