@@ -1,3 +1,8 @@
+2002-05-06  Paolo Maggi <maggi@athena.polito.it>
+
+	* gedit-document.c: fixed bug #80841 
+	(Thanks to Mats-Ola Persson)
+
 2002-05-03  Federico Mena Quintero  <federico@ximian.com>
 
 	* gedit-document.c (gedit_document_save_as_real): Do saving in
